--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "font-awesome": "^4.7.0",
     "css-reset": "^2.5.1",
     "jquery": "^3.1.1",
-    "reset-css": "^2.2.0"
+    "reset-css": "^2.2.0",
+    "jquery-ui": "^1.12.1",
+    "flexslider": "^2.7.1"
   }
 }
